--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.android.split_personality"
+        applicationId "com.android.splitpersonality"
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
