--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    <receiver android:name=".Create_Profile.MyBroadcastReceiver" >
+    </receiver>
     </application>
 
 
